--- a/projects.html
+++ b/projects.html
@@ -52,19 +52,19 @@
     <div class="projects-container"> 
         <div class="container-boxes">
             <div class="box1">
-                <img src="/images/steami.png" width="300px" height="300px">
+                <img src="images/steami.png" width="300px" height="300px">
             </div>
             <div class="box1">
-                <img src="/images/magic.jpg" width="300px" height="300px">
+                <img src="images/magic.jpg" width="300px" height="300px">
             </div>
             <div class="box1">
-                <img src="/images/IMG_0409.jpg" width="300px" height="300px">
+                <img src="images/IMG_0409.jpg" width="300px" height="300px">
             </div>
             <div class="box1">
-                <img src="/images/this.PNG" width="300px" height="300px">
+                <img src="images/this.PNG" width="300px" height="300px">
             </div>
             <div class="box1">
-                <img src="/images/computer folder open.svg" width="300px" height="300px">
+                <img src="images/computer folder open.svg" width="300px" height="300px">
             </div>
         </div>
     </div>
