--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
     <div class="projects-container"> 
         <div class="container-boxes">
             <div class="box1">
-                <img src="images/steami.png" width="300px" height="300px">
+                <img src="images/steam.png" width="300px" height="300px">
             </div>
             <div class="box1">
                 <img src="images/magic.jpg" width="300px" height="300px">
